--- a/Cimob/Views/Concursoes/consultarDocumentacao.cshtml
+++ b/Cimob/Views/Concursoes/consultarDocumentacao.cshtml
@@ -4,9 +4,8 @@
     <div class="vertical-menu">
         <a href="#" class="active">Concurso</a>
         <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="consultarDetalhe" >Detalhe Concurso</a>
-        <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="consultarBolsa">Bolsas</a>
-        <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="consultarDocumentacao">Regulamentos</a>
-        <a class="SubMenu" asp-area="" asp-controller="Candidaturas" asp-action="Create" >Candidatar</a>
+        <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="consultarDocumentacao">Documentação</a>
+        <a class="SubMenu" asp-area="" asp-controller="Candidaturas" asp-action="Create" >Candidatar</a> 
         <a class="SubMenu" asp-area="" asp-controller="Home" asp-action="Team">Ajuda</a>
     </div>
 
