--- a/Cimob/Views/Home/Index.cshtml
+++ b/Cimob/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
     </div>
     <div class="ImageHomeDiv">
         <input type="Image" class="ImageHome" onclick="location.href ='@Url.Action("SearchEscolas", "Escolas")'; return false;" src="~/images/escolas.png" />
-        <label>Consulta as Escolas Disponíveis</label>
+        <label>Consulta as Parcerias</label>
     </div>
     <div class="ImageHomeDiv">
         <input type="Image" class="ImageHome" onclick="location.href ='@Url.Action("SearchPais", "Pais")'; return false;" src="~/images/mundo.png" />
