--- a/Cimob/Views/Manage/ChangePassword.cshtml
+++ b/Cimob/Views/Manage/ChangePassword.cshtml
@@ -1,23 +1,19 @@
 ﻿@model ChangePasswordModel
-<div class="DefaultPresentation">
+<div class="DefaultPresentation" style="width:100%">
     <div class="vertical-menu">
         <a href="#" class="active">Gestão de conta</a>
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ConsultarDados">Consultar Dados</a>
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="AlterarDados">Alterar Dados</a>
         <a class="SubMenuSelected" asp-area="" asp-controller="Manage" asp-action="ChangePassword">Alterar Password</a>
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="VerCandidaturasPendentes">Ver Candidaturas Pendentes</a>
+        <a class="SubMenu" asp-area="" asp-controller="Entrevistas" asp-action="IndexUser">Ver Entrevistas Pendentes</a>
     </div>
-    <div class="descriptionText">
-        <h1>Ver Candidaturas Pendentes</h1>
+    <div class="descriptionText">     
 
         <div class="row">
             <div class="col-md-6">
                 <form method="post">
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group">
-                        <input asp-for="OldPassword" class="form-control" placeholder="Palavar-passe antiga" />
-                        <span asp-validation-for="OldPassword" class="text-danger"></span>
-                    </div>
+                    <div asp-validation-summary="All" class="text-danger"></div>                    
                     <div class="form-group">
                         <input asp-for="NewPassword" class="form-control" placeholder="Nova palavra-passe" />
                         <span asp-validation-for="NewPassword" class="text-danger"></span>
