--- a/Cimob/Views/Manage/ConsultarDados.cshtml
+++ b/Cimob/Views/Manage/ConsultarDados.cshtml
@@ -6,6 +6,7 @@
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="AlterarDados">Alterar Dados</a>
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ChangePassword">Alterar Password</a>
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="VerCandidaturasPendentes">Ver Candidaturas Pendentes</a>
+        <a class="SubMenu" asp-area="" asp-controller="Entrevistas" asp-action="IndexUser">Ver Entrevistas Pendentes</a>
     </div>
     <div class="descriptionText">       
         
