--- a/Cimob/Views/PontoInteresses/ChooseItem.cshtml
+++ b/Cimob/Views/PontoInteresses/ChooseItem.cshtml
@@ -15,7 +15,7 @@
     <select asp-for="@Model.Id" class="form-control" asp-items="ViewBag.Pontos"></select> <a asp-action="ChooseItem" asp-route-id="@Model.Id">Ver Ponto</a>
 
 
-    <iframe src=@ViewBag.url width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src=@Model.Url width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 </body>
 </html>
