--- a/Cimob/Views/Candidaturas/AlterarEstadoConfirm.cshtml
+++ b/Cimob/Views/Candidaturas/AlterarEstadoConfirm.cshtml
@@ -15,19 +15,17 @@
         @if (@ViewBag.Estado == "Aceite")
     {
         <label> Está prestes a aceitar a candidatura. Deseja Continuar?</label>
-        <div style="margin-left: 10%;">
-            <a asp-action="Detalhe" asp-route-id="@Model.CandidaturaId">Não</a>|
-
-            <form asp-route-returnUrl=null method="post">
+        <div style="margin-left: 10%;display:table">
+            <a asp-action="Detalhe"  class="btn btn-default" style="display:table-cell" asp-route-id="@Model.CandidaturaId">Não</a>
+            <form asp-route-returnUrl=null style="display:table-cell" method="post">
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
+                <div class="form-group" hidden>
                     <input asp-for="EstadoCandidaturaId" class="form-control" value=@ViewBag.EstadoCandidaturaId />
                 </div>
                 <div class="form-group" hidden>
                     <input asp-for="CandidaturaId" class="form-control" value=@ViewBag.CandidaturaId />
                 </div>
-
                 <button type="submit" class="btn btn-default">Sim</button>
             </form>
 
@@ -38,13 +36,13 @@
 } @if (@ViewBag.Estado == "Rejeitado")
     {
         <label> Está prestes a rejeitar a candidatura. Deseja Continuar?</label>
-        <div style="margin-left: 10%;">
-            <a asp-action="Detalhe" asp-route-id="@Model.CandidaturaId">Não</a>|
+        <div style="margin-left: 10%;display:table">
+            <button asp-action="Detalhe" class="btn btn-default" style="display:table-cell" asp-route-id="@Model.CandidaturaId">Não</button>
 
-            <form asp-route-returnUrl=null method="post">
+            <form asp-route-returnUrl=null style="display:table-cell" method="post">
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
+                <div class="form-group" hidden>
                     <input asp-for="EstadoCandidaturaId" class="form-control" value=@ViewBag.EstadoCandidaturaId />
                 </div>
                 <div class="form-group" hidden>
