--- a/Cimob/Views/Concursoes/Index.cshtml
+++ b/Cimob/Views/Concursoes/Index.cshtml
@@ -7,28 +7,29 @@
     <div class="vertical-menu">
         <a href="#" class="active">Informação Sobre Concursos</a>
         @if (ViewBag.Tipo == 1)
-        {
-            <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Para Alunos</a>
-            <a class="SubSubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Abertos</a>
-            <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorTipo" asp-route-id="1">Por Tipos de Concurso</a>
-            <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorParceria" asp-route-id="1">Por Parcerias</a>
-            <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorPais" asp-route-id="1">Por Pais</a>
-            <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Para Docentes</a>
-        }
-        else
-        {
-            <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Para Alunos</a>
-            <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Para Docentes</a>
-            <a class="SubSubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Abertos</a>
-            <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorTipo" asp-route-id="2">Por Tipos de Concurso</a>
-            <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorParceria" asp-route-id="2">Por Parcerias</a>
-            <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorPais" asp-route-id="2">Por Pais</a>
+    {
+        <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Para Alunos</a>
+        <a class="SubSubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Abertos</a>
+        <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorTipo" asp-route-id="1">Por Tipos de Concurso</a>
+        <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorParceria" asp-route-id="1">Por Parcerias</a>
+        <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorPais" asp-route-id="1">Por Pais</a>
+        <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Para Docentes</a>
+        <a class="SubMenu" asp-area="" asp-controller="AjudaAutenticacaos" asp-action="Index" asp-route-id="Concursos">Ajuda</a>
+}
+else
+{
+    <a class="SubMenu" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="1">Para Alunos</a>
+    <a class="SubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Para Docentes</a>
+    <a class="SubSubMenuSelected" asp-area="" asp-controller="Concursoes" asp-action="Index" asp-route-id="2">Abertos</a>
+    <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorTipo" asp-route-id="2">Por Tipos de Concurso</a>
+    <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorParceria" asp-route-id="2">Por Parcerias</a>
+    <a class="SubSubMenu" asp-area="" asp-controller="Concursoes" asp-action="PorPais" asp-route-id="2">Por Pais</a>
+    <a class="SubMenu" asp-area="" asp-controller="AjudaAutenticacaos" asp-action="Index" asp-route-id="Concursos">Ajuda</a>
 
-        }
-    </div>
-
-
-        <table class="table" style="margin-left:5%">
+}
+    </div>       
+ 
+        <table id="showdiv" class="table" style="margin-left:5%">
             <thead>
                 <tr>
                     <th>
@@ -56,32 +57,32 @@
             </thead>
             <tbody>
                 @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.concurso.Nome)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.concurso.TipoConcurso.Nome)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TipoDeUser.nomeTipo)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.escola.Nome)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.escola.Pais)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.concurso.Prazo)
-                        </td>
-                        <td>
-                            <a asp-area="" asp-controller="Concursoes" asp-action="consultarDetalhe" asp-route-id=@item.concurso.ConcursoId>Consultar</a>
-                        </td>
-                    </tr>
-                }
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.concurso.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.concurso.TipoConcurso.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TipoDeUser.nomeTipo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.escola.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.escola.Pais)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.concurso.Prazo)
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Concursoes" asp-action="consultarDetalhe" asp-route-id=@item.concurso.ConcursoId>Consultar</a>
+                    </td>
+                </tr>
+        }
             </tbody>
         </table>
-    </div>
+</div>
 </div>
