--- a/Cimob/Views/Manage/VerCandidaturasPendentes.cshtml
+++ b/Cimob/Views/Manage/VerCandidaturasPendentes.cshtml
@@ -5,7 +5,8 @@
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ConsultarDados">Consultar Dados</a>
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="AlterarDados">Alterar Dados</a>
         <a class="SubMenu" asp-area="" asp-controller="Manage" asp-action="ChangePassword">Alterar Password</a>
-        <a class="SubMenuSelected" asp-area="" asp-controller="Manage" asp-action="VerCandidaturasPendentes">Ver Candidaturas Pendentes</a>
+        <a class="SubMenuSelected" asp-area="" asp-controller="Manage" asp-action="VerCandidaturasPendentes">Ver Estado Candidatura</a>
+        <a class="SubMenu" asp-area="" asp-controller="Entrevistas" asp-action="IndexUser">Ver Entrevistas Pendentes</a>
     </div>
 
                             <table class="table" style="margin-left:5%">
